λ TUI Step 5 complete — charm.clj Elm Architecture
Δ STATE: tui ✓, agent-session ✓, 161 tests
Δ PLAN: Step 5 done, backlog updated
Δ LEARNING: charm.clj patterns, JLine compat, poll-cmd pattern